# xsmc

./: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: .buildinfo  arg.ipynb  cite.html  example.ipynb  genindex.html  index.html  install.html  objects.inv  py-modindex.html  quickstart.html  quickstart.ipynb  search.html  searchindex.js  xsmc.html
docs/_sources/: cite.rst.txt  index.rst.txt  xsmc.rst.txt
docs/_sources/paper/: index.rst.txt  psmc.ipynb.txt
docs/_static/: documentation_options.js
docs/paper/: 1kg.html  1kg.ipynb  empirical.ipynb  index.html  prior_simulation.html  prior_simulation.ipynb  psmc.html  psmc.ipynb  simulation.html  simulation.ipynb
docsrc/: Makefile  make.sh
docsrc/source/: conf.py  install.rst
docsrc/source/paper/: competing_simulation.py  index.rst  psmc.ipynb  truncation.ipynb
include/: LambertW.h  _sampler.hpp
src/: kastore.c  kastore.h  tskit  tskit.h
test/: test_arg.py  test_sampler.py  test_size_history.py  test_slow.py  test_viterbi.py  test_xsmc.py
xsmc/: __init__.py  _sampler.cpp  _sampler.pxd  _sampler.pyx  _tskit.pxd  _viterbi.cpp  _viterbi.pxd  _viterbi.pyx  _xsmc.cpp  _xsmc.pxd  _xsmc.pyx  arg.py  gsl.pxd  lwtc.pxd  sampler.py  segmentation.py  size_history.py  xsmc.py
xsmc/supporting/: __init__.py  kde_ne.py  mspsmc.py  plotting.py
