[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29", "numpy >= 1.15", "scipy >= 1.5.0",  "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "xsmc/version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
# install pytest in the virtualenv where commands will be executed
deps = 
    pytest
    msprime
commands =
    pytest test
"""
